--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,11 @@ import Experience from "../components/experience/index.astro";
 import { EXPERIENCE } from "../data/experience";
 import { SOCIALS } from "../data/socials";
 import Layout from "../layouts/Layout.astro";
+import Footer from '../components/Footer.astro';
+
 ---
 
-<Layout title="Vadim Rusin">
+<Layout title="Nico Foundas">
   <div class="relative hero z-10">
     <div
       class="mx-auto min-h-screen max-w-screen-2xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0"
@@ -15,34 +17,81 @@ import Layout from "../layouts/Layout.astro";
         <header
           class="lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24"
         >
-          <div
-            class="flex lg:items-start gap-4 flex-col lg:flex-row items-center text-center lg:text-left"
-          >
-            <img src="/avatar.webp" alt="Vadim Rusin" class="w-16 h-16" />
-            <div>
-              <a
-                href="/"
-                class="text-4xl lg:text-5xl block font-bold tracking-tight bg-clip-text text-transparent bg-gradient-to-b from-neutral-50 to-neutral-400 bg-opacity-50"
-              >
-                <h1>Vadim Rusin</h1>
-              </a>
-              <h2 class="mt-2 text-sm lg:text-lg font-medium text-neutral-400">
-                Experienced Front-End Engineer
-              </h2>
-
-              <a
-                data-ccursor
-                href="mailto:rusinvadym@gmail.com"
-                class="inline-flex transition-all border-neutral-700 hover:border-opacity-0 border-opacity-50 shadow rounded-md border backdrop-blur-xl bg-neutral-400/10 px-3 py-2.5 items-center text-white font-semibold group p-2 text-sm gap-x-2 mt-4"
-              >
-                <span>Email me</span>
-                <sapn
-                  class="w-2 h-2 rounded-full bg-green-400 duration-1000 animate-pulse"
+          <div class="flex lg:items-start gap-4 flex-col  items-center text-center lg:text-left" >
+            <div class="flex lg:items-start gap-4 flex-col lg:flex-row items-center text-center lg:text-left">
+              <img src="/avatar.webp" alt="Nico Foundas" class="w-26 h-36" />
+              <div>
+                <a
+                    href="/"
+                    class="text-4xl lg:text-5xl block font-bold tracking-tight bg-clip-text text-transparent bg-gradient-to-b from-neutral-50 to-neutral-400 bg-opacity-50"
                 >
-                </sapn>
-              </a>
+                  <h1>Nico Foundas</h1>
+                </a>
+                <h2 class="mt-2 text-sm lg:text-lg font-medium text-neutral-400">
+                  Senior Frontend Software Engineer · <br> Freelancer
+                </h2>
+
+                <a
+                    data-ccursor
+                    href="mailto:nico@foundas.de"
+                    class="inline-flex transition-all border-neutral-700 hover:border-opacity-0 border-opacity-50 shadow rounded-md border backdrop-blur-xl bg-neutral-400/10 px-3 py-2.5 items-center text-white font-semibold group p-2 text-sm gap-x-2 mt-4"
+                >
+                  <span>Email me</span>
+                  <span
+                      class="w-2 h-2 rounded-full bg-green-400 duration-1000 animate-pulse"
+                  >
+                  </span>
+                </a>
+              </div>
             </div>
+
+            <section
+                id="about"
+                class="mt-16 scroll-mt-16 "
+                aria-label="About me"
+            >
+              <div
+                  class="sticky top-0 z-20 -mx-6 mb-4 w-screen px-6 py-3 backdrop-blur-lg md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0"
+              >
+                <h2
+                    class="text-sm font-bold uppercase tracking-widest text-neutral-200 lg:sr-only"
+                >
+                  About
+                </h2>
+              </div>
+              <div>
+                <div class="mb-4 space-y-4">
+                  <p>
+                    Hey,<br><br>
+
+                    I am Nico and I am a frontend enthusiast!<br>
+                    Since starting my carreer over 7 years ago I am designing and
+                    developing complex business applications. The main framework I
+                    was working with in the past years was ReactJS, but I am definitely
+                    not bound to that and looking forward to learn new things all the time.
+                    My expertise extends to understanding and defining complex algorithms
+                    and domain specific contexts as well as closely collaborating with
+                    designers.
+                  </p>
+
+                  <p>
+                    I am looking forward to new challenges and exciting collaborations!
+                  </p>
+                </div>
+
+                <ul class="mt-2 flex flex-wrap" aria-label="main skills">
+                  {['TypeScript', 'ReactJS', 'Architecture', 'Project Lead', 'Project Setup', 'Design', 'Code Reviews', 'Test Automation', 'Quality Assurance', ].map((skill) => (
+                      <li class="mr-1.5 mt-2">
+                        <div class="flex items-center backdrop-blur-sm rounded-full border border-neutral-700 border-opacity-50 shadow bg-neutral-400/10 px-3 py-1 text-xs font-medium leading-5 text-neutral-300">
+                          {skill}
+                        </div>
+                      </li>
+                  ))}
+                </ul>
+              </div>
+            </section>
           </div>
+
 
           {
             SOCIALS.length && (
@@ -71,38 +120,6 @@ import Layout from "../layouts/Layout.astro";
 
         <main id="content" class="pt-24 lg:w-1/2 lg:py-24">
           <section
-            id="about"
-            class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
-            aria-label="About me"
-          >
-            <div
-              class="sticky top-0 z-20 -mx-6 mb-4 w-screen px-6 py-3 backdrop-blur-lg md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0"
-            >
-              <h2
-                class="text-sm font-bold uppercase tracking-widest text-neutral-200 lg:sr-only"
-              >
-                About
-              </h2>
-            </div>
-            <div>
-              <div class="mb-4 space-y-4">
-                <p>
-                  In my current role as a Full Stack Engineer at Dutch Pet
-                  (Remote), I am at the forefront of designing and architecting
-                  dutch.com, leveraging a powerful stack including Shopify
-                  Storefront API, Admin API, Vue.JS, Node.JS, Liquid, Alpine.js,
-                  and Tailwind. My expertise extends to integrating with the
-                  ReCharge subscription system and collaborating closely with
-                  designers to ensure pixel-perfect layouts and user flows.
-                </p>
-
-                <p>
-                  Looking forward to new challenges and exciting collaborations!
-                </p>
-              </div>
-            </div>
-          </section>
-          <section
             id="experience"
             class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
             aria-label="Work experience"
@@ -124,7 +141,7 @@ import Layout from "../layouts/Layout.astro";
                 <a
                   data-ccursor
                   class="inline-flex items-center leading-tight text-neutral-200 font-semibold group p-2 rounded px-3"
-                  aria-label="View Full Résumé"
+                  aria-label="View Full Resume"
                   target="_blank"
                   rel="noreferrer noopener"
                   href="./resume.pdf"
@@ -160,30 +177,21 @@ import Layout from "../layouts/Layout.astro";
           </section>
           <footer class="max-w-md pb-16 text-sm text-neutral-500 sm:pb-0">
             <p>
-              Designed in
-              <a
-                href="https://www.figma.com/"
-                class="font-medium text-neutral-400 hover:text-red-300 focus-visible:text-red-300 hover:underline"
+              Inspired by <a
+                class="font-small leading-tight text-neutral-200 hover:text-neutral-300 focus-visible:text-neutral-300 group/link"
+
+                href="/imprint/"
                 target="_blank"
-                rel="noreferrer">Figma</a
-              >
-              and coded in
-              <a
-                href="https://code.visualstudio.com/"
-                class="font-medium text-neutral-400 hover:text-red-300 focus-visible:text-red-300 hover:underline"
-                target="_blank"
-                rel="noreferrer">Visual Studio Code</a
-              >
+                rel="noreferrer"
+                aria-label="Vadim Rusin"
+            >Vadim Rusin</a>
             </p>
           </footer>
         </main>
       </div>
     </div>
+    <Footer />
   </div>
-
-  <footer class="text-center py-4 text-xs">
-    {new Date().getFullYear()} All rights reserved.
-  </footer>
 </Layout>
 
 <style scoped>
